--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+Authlib==1.3.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+cryptography==43.0.3
 idna==3.10
+pycparser==2.22
+python-dotenv==1.0.1
 requests==2.32.3
 urllib3==2.2.3
+whoop==0.1.0
