--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+anyio==4.6.2.post1
 Authlib==1.3.2
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 cryptography==43.0.3
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.0
 idna==3.10
+notion-client==2.2.1
 pycparser==2.22
 python-dotenv==1.0.1
+PyYAML==6.0.2
 requests==2.32.3
+sniffio==1.3.1
 urllib3==2.2.3
 whoop==0.1.0
