--- a/samconfig.toml.example
+++ b/samconfig.toml.example
@@ -19,7 +19,7 @@ resolve_s3 = true
 s3_prefix = "notion-dashboard"
 region = "eu-west-2"
 disable_rollback = true
-parameter_overrides = "NotionApiKey=\"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\" WhoopUsername=\"jake.edward.godsall@gmail.com\" WhoopPassword=\"{2lwMr6@;J-6\" LingqApiKey=\"b9ffc4c3cd19828b526438ad6df8c3cd1fb7039d\""
+parameter_overrides =
 image_repositories = []
 
 [default.package.parameters]
